--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -5,47 +5,59 @@
 html {
 	font-size: 62.5%;
 }
+
 body {
 	font-size: 1.5em;
 	line-height: 1.6;
 	font-weight: 400;
 	font-family: 'Advent Pro', sans-serif;
-  color: #222;
-  margin: 0;
+	color: #222;
+	margin: 0;
 }
 
 /* Typography
 ********************************************************************* */
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
 	margin-top: 0;
 	margin-bottom: 2rem;
 	font-weight: 300;
 }
+
 h1 {
 	font-size: 4.0rem;
 	line-height: 1.2;
 	letter-spacing: -.1rem;
 }
+
 h2 {
 	font-size: 3.6rem;
 	line-height: 1.25;
 	letter-spacing: -.1rem;
 }
+
 h3 {
 	font-size: 3.0rem;
 	line-height: 1.3;
 	letter-spacing: -.1rem;
 }
+
 h4 {
 	font-size: 2.4rem;
 	line-height: 1.35;
 	letter-spacing: -.08rem;
 }
+
 h5 {
 	font-size: 1.8rem;
 	line-height: 1.5;
 	letter-spacing: -.05rem;
 }
+
 h6 {
 	font-size: 1.5rem;
 	line-height: 1.6;
@@ -53,41 +65,50 @@ h6 {
 }
 
 p {
-  font-family: 'Open Sans', Helvetica, Arial, sans-serif;
+	font-family: 'Open Sans', Helvetica, Arial, sans-serif;
 }
 
 /* Larger than phablet */
 @media (min-width: 550px) {
-h1 {
-	font-size: 5.0rem;
+	h1 {
+		font-size: 5.0rem;
+	}
+
+	h2 {
+		font-size: 4.2rem;
+	}
+
+	h3 {
+		font-size: 3.6rem;
+	}
+
+	h4 {
+		font-size: 3.0rem;
+	}
+
+	h5 {
+		font-size: 2.4rem;
+	}
+
+	h6 {
+		font-size: 1.5rem;
+	}
 }
-h2 {
-	font-size: 4.2rem;
-}
-h3 {
-	font-size: 3.6rem;
-}
-h4 {
-	font-size: 3.0rem;
-}
-h5 {
-	font-size: 2.4rem;
-}
-h6 {
-	font-size: 1.5rem;
-}
-}
+
 p {
-  margin-top: 0;
+	margin-top: 0;
 }
+
 /* Links
 ********************************************************************* */
 a {
 	color: #1EAEDB;
 }
+
 a:hover {
 	color: #0FA0CE;
 }
+
 /* Header Section
 ********************************************************************* */
 header {
@@ -99,25 +120,29 @@ header {
 	-webkit-justify-content: center;
 	-ms-flex-pack: center;
 	justify-content: center;
-  width: 100%;
+	width: 100%;
 	height: 100vh;
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e55d87', endColorstr='#5fc3e4', GradientType=1 );
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#e55d87', endColorstr='#5fc3e4', GradientType=1);
 }
+
 .background-img {
-  width: 100%;
-  z-index: -1;
-  position: absolute;
-  top: 0;
+	width: 100%;
+	height: 100vh;
+	z-index: -1;
+	position: absolute;
+	top: 0;
 }
+
 .title {
 	-webkit-align-self: center;
 	-ms-flex-item-align: center;
 	align-self: center;
 	padding: 2rem;
 	max-width: 960px;
-  text-align: center;
-  height: 100vh;
+	text-align: center;
+	height: 100vh;
 }
+
 .title .smallsep {
 	background: #fff;
 	height: 2px;
@@ -126,6 +151,7 @@ header {
 	margin-top: 30px;
 	margin-bottom: 30px;
 }
+
 .title h1 {
 	font-size: 80px;
 	font-weight: 300;
@@ -136,6 +162,7 @@ header {
 	padding: 0;
 	color: #FFFFFF;
 }
+
 .title h2 {
 	color: #FFFFFF;
 	font-size: 16px;
@@ -146,10 +173,11 @@ header {
 }
 
 @media only screen and (max-height: 700px) {
-.title h1 {
-	font-size: 80px;
+	.title h1 {
+		font-size: 80px;
+	}
 }
-}
+
 .title p {
 	max-width: 600px;
 	margin: 0 auto;
@@ -157,14 +185,16 @@ header {
 }
 
 @media only screen and (max-width: 500px) {
-.title h1 {
-	font-size: 65px;
+	.title h1 {
+		font-size: 65px;
+	}
 }
-}
+
 .title .icon {
 	color: #FFFFFF;
 	font-size: 50px;
 }
+
 .main_nav {
 	position: fixed;
 	top: 0px;
@@ -182,28 +212,36 @@ header {
 }
 
 @media only screen and (max-width: 766px) {
-.main_nav {
-	padding-top: 25px;
+	.background-img {
+		width: 100%;
+	}
+
+	.main_nav {
+		padding-top: 25px;
+	}
 }
-}
+
 .open-nav {
 	max-height: 400px !important;
 }
+
 .sticky {
 	background-color: #ffffff;
 	opacity: 1;
 	top: 0px;
 }
+
 nav {
 	width: 100%;
 	margin-top: 5px;
 }
 
 @media only screen and (max-width: 766px) {
-nav {
-	width: 100%;
+	nav {
+		width: 100%;
+	}
 }
-}
+
 nav ul {
 	list-style: none;
 	overflow: hidden;
@@ -211,13 +249,14 @@ nav ul {
 }
 
 @media only screen and (max-width: 766px) {
-nav ul {
-	padding-top: 0px;
-	margin-bottom: 22px;
-	text-align: center;
-	width: 100%;
+	nav ul {
+		padding-top: 0px;
+		margin-bottom: 22px;
+		text-align: center;
+		width: 100%;
+	}
 }
-}
+
 nav ul li {
 	display: inline-block;
 	margin-left: 35px;
@@ -226,15 +265,17 @@ nav ul li {
 }
 
 @media only screen and (max-width: 766px) {
-nav ul li {
-	width: 100%;
-	padding: 7px 0;
-	margin: 0;
+	nav ul li {
+		width: 100%;
+		padding: 7px 0;
+		margin: 0;
+	}
+
+	nav ul li:first-child {
+		margin-top: 70px;
+	}
 }
-nav ul li:first-child {
-	margin-top: 70px;
-}
-}
+
 nav ul a {
 	text-transform: uppercase;
 	font-size: 18px;
@@ -252,10 +293,11 @@ nav ul a {
 }
 
 @media only screen and (max-width: 766px) {
-.mobile-toggle {
-	display: block;
+	.mobile-toggle {
+		display: block;
+	}
 }
-}
+
 .mobile-toggle span {
 	width: 30px;
 	height: 4px;
@@ -263,6 +305,7 @@ nav ul a {
 	background: #000000;
 	display: block;
 }
+
 .scroll-down {
 	position: absolute;
 	left: 50%;
@@ -289,126 +332,156 @@ nav ul a {
 
 /*animated scroll arrow animation*/
 @-webkit-keyframes fade_move_down {
- 0% {
--webkit-transform:translate(0, -10px) rotate(45deg);
-opacity: 0;
+	0% {
+		-webkit-transform: translate(0, -10px) rotate(45deg);
+		opacity: 0;
+	}
+
+	50% {
+		opacity: 1;
+	}
+
+	100% {
+		-webkit-transform: translate(0, 10px) rotate(45deg);
+		opacity: 0;
+	}
 }
- 50% {
-opacity: 1;
-}
- 100% {
--webkit-transform:translate(0, 10px) rotate(45deg);
-opacity: 0;
-}
-}
+
 @-moz-keyframes fade_move_down {
- 0% {
--moz-transform:translate(0, -10px) rotate(45deg);
-opacity: 0;
+	0% {
+		-moz-transform: translate(0, -10px) rotate(45deg);
+		opacity: 0;
+	}
+
+	50% {
+		opacity: 1;
+	}
+
+	100% {
+		-moz-transform: translate(0, 10px) rotate(45deg);
+		opacity: 0;
+	}
 }
- 50% {
-opacity: 1;
-}
- 100% {
--moz-transform:translate(0, 10px) rotate(45deg);
-opacity: 0;
-}
-}
+
 @keyframes fade_move_down {
- 0% {
-transform:translate(0, -10px) rotate(45deg);
-opacity: 0;
+	0% {
+		transform: translate(0, -10px) rotate(45deg);
+		opacity: 0;
+	}
+
+	50% {
+		opacity: 1;
+	}
+
+	100% {
+		transform: translate(0, 10px) rotate(45deg);
+		opacity: 0;
+	}
 }
- 50% {
-opacity: 1;
-}
- 100% {
-transform:translate(0, 10px) rotate(45deg);
-opacity: 0;
-}
-}
+
 /* About Section
 ********************************************************************* */
 
 #about {
 	padding: 100px 0 50px 0;
 }
+
 /* Team Section
 ********************************************************************* */
 #team {
 	padding: 50px 0 100px 0;
 }
+
 #team .icon {
 	font-size: 26px;
 }
+
 /* Skills Section
 ********************************************************************* */
 #skills {
 	padding: 100px 0 100px 0;
 	background-color: #F5F5F5;
 }
+
 .progressBar {
 	margin-bottom: 26px;
 	margin-bottom: 1.66em;
 }
+
 .progressBar h4 {
 	font-size: 16px;
 	text-transform: none;
 	margin-bottom: 7px;
 	margin-bottom: .33em;
 }
+
 .progressBarContainer {
 	width: 100%;
 	height: 8px;
 	background: #E1E1E1;
 	overflow: hidden;
 }
+
 .progressBarValue {
 	height: 8px;
 	float: left;
-	background: #e55d87; /* Old browsers */
+	background: #e55d87;
+	/* Old browsers */
 	background: -moz-linear-gradient(-45deg, #e55d87 0%, #5fc3e4 100%);
 	background: -webkit-linear-gradient(-45deg, #e55d87 0%, #5fc3e4 100%);
 	background: linear-gradient(135deg, #e55d87 0%, #5fc3e4 100%);
 }
+
 .value-00 {
 	width: 0;
 }
+
 .value-10 {
 	width: 10%;
 }
+
 .value-20 {
 	width: 20%;
 }
+
 .value-30 {
 	width: 30%;
 }
+
 .value-40 {
 	width: 40%;
 }
+
 .value-50 {
 	width: 50%;
 }
+
 .value-60 {
 	width: 60%;
 }
+
 .value-70 {
 	width: 70%;
 }
+
 .value-80 {
 	width: 80%;
 }
+
 .value-90 {
 	width: 90%;
 }
+
 .value-100 {
 	width: 100%;
 }
+
 /* Portfolio Section
 ********************************************************************* */
 #portfolio {
 	padding: 100px 0 100px 0;
 }
+
 .image {
 	background-color: #5a5a5a;
 	width: 100%;
@@ -417,6 +490,7 @@ opacity: 0;
 	margin-right: auto;
 	transition: .5s;
 }
+
 .image:hover {
 	opacity: 0.6;
 	transition: .3s;
@@ -431,12 +505,14 @@ opacity: 0;
 	background-color: #F5F5F5;
 	padding: 100px 0 100px 0;
 }
+
 .quoteLoop {
 	height: auto;
 	width: 100%;
 	margin: 0 auto;
 	position: relative;
 }
+
 .quote {
 	margin: 10px 30px;
 	height: inherit;
@@ -444,14 +520,25 @@ opacity: 0;
 	display: none;
 	text-align: center;
 }
+
 /* Contact Section
 ********************************************************************* */
 #contact {
 	padding: 100px 0 100px 0;
 }
-input[type="email"], input[type="number"], input[type="search"], input[type="text"], input[type="tel"], input[type="url"], input[type="password"], textarea, select {
+
+input[type="email"],
+input[type="number"],
+input[type="search"],
+input[type="text"],
+input[type="tel"],
+input[type="url"],
+input[type="password"],
+textarea,
+select {
 	height: 38px;
-	padding: 6px 10px; /* The 6px vertically centers text on FF, ignored by Webkit */
+	padding: 6px 10px;
+	/* The 6px vertically centers text on FF, ignored by Webkit */
 	background-color: #F5F5F5;
 	border: none;
 	box-shadow: none;
@@ -459,9 +546,11 @@ input[type="email"], input[type="number"], input[type="search"], input[type="tex
 	border-radius: 0;
 	outline: none;
 }
+
 textarea {
 	min-height: 250px;
 }
+
 input[type="submit"] {
 	display: inline-block;
 	height: 38px;
@@ -481,10 +570,12 @@ input[type="submit"] {
 	cursor: pointer;
 	box-sizing: border-box;
 }
+
 input[type="submit"]:hover {
 	background: #e55d87;
 	text-decoration: none;
 }
+
 /* Footer Section
 ********************************************************************* */
 footer {
@@ -494,70 +585,104 @@ footer {
 	background: -moz-linear-gradient(-45deg, #e55d87 0%, #5fc3e4 100%);
 	background: -webkit-linear-gradient(-45deg, #e55d87 0%, #5fc3e4 100%);
 	background: linear-gradient(135deg, #e55d87 0%, #5fc3e4 100%);
- filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e55d87', endColorstr='#5fc3e4', GradientType=1 );
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#e55d87', endColorstr='#5fc3e4', GradientType=1);
 	box-sizing: border-box;
 }
+
 footer p {
 	color: #FFFFFF;
 	margin: 20px 0 0 0;
 }
+
 .socialIcons {
 	font-size: 34px;
 	color: rgba(255, 255, 255, 0.7);
 }
+
 /* Lists
 ********************************************************************* */
 ul {
 	list-style: circle inside;
 }
+
 ol {
 	list-style: decimal inside;
 }
-ol, ul {
+
+ol,
+ul {
 	padding-left: 0;
 	margin-top: 0;
 }
-ul ul, ul ol, ol ol, ol ul {
+
+ul ul,
+ul ol,
+ol ol,
+ol ul {
 	margin: 1.5rem 0 1.5rem 3rem;
 	font-size: 90%;
 }
+
 li {
 	margin-bottom: 1rem;
 }
+
 /* Spacing
 ********************************************************************* */
-button, .button {
+button,
+.button {
 	margin-bottom: 1rem;
 }
-input, textarea, select, fieldset {
+
+input,
+textarea,
+select,
+fieldset {
 	margin-bottom: 1.5rem;
 }
-pre, blockquote, dl, figure, table, p, ul, ol, form {
+
+pre,
+blockquote,
+dl,
+figure,
+table,
+p,
+ul,
+ol,
+form {
 	margin-bottom: 2.5rem;
 }
+
 /* Utilities
 ********************************************************************* */
 .u-full-width {
 	width: 100%;
 	box-sizing: border-box;
 }
+
 .u-max-full-width {
 	max-width: 100%;
 	box-sizing: border-box;
 }
+
 .u-pull-right {
 	float: right;
 }
+
 .u-pull-left {
 	float: left;
 }
+
 /* Clearing
 ********************************************************************* */
-.container:after, .row:after, .u-cf {
+.container:after,
+.row:after,
+.u-cf {
 	content: "";
 	display: table;
 	clear: both;
 }
+
 /* Misc
 ********************************************************************* */
 
@@ -565,10 +690,12 @@ pre, blockquote, dl, figure, table, p, ul, ol, form {
 	padding-right: 10px;
 	color: #e55d87;
 }
+
 .block {
 	width: 70px;
 	height: 2px;
-	background: #e55d87; /* Old browsers */
+	background: #e55d87;
+	/* Old browsers */
 	background: -moz-linear-gradient(-45deg, #3e5be9 0%, #e95e89 100%);
 	background: -webkit-linear-gradient(-45deg, #3e5be9 0%, #e95e89 100%);
 	background: linear-gradient(135deg, #3e5be9 0%, #e95e89 100%);
